--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,15 +60,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.34f1c1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Battle\Logic\Base\LogicEntity.cs" />
-    <Compile Include="Assets\Battle\Logic\Base\IDispose.cs" />
-    <Compile Include="Assets\Battle\Logic\Base\LogicWorld.cs" />
-    <Compile Include="Assets\Battle\Worlds.cs" />
-    <Compile Include="Assets\Battle\Logic\Base\LogicComponent.cs" />
-    <Compile Include="Assets\Battle\Logic\Base\LogicMatcher.cs" />
-    <Compile Include="Assets\Battle\Logic\Base\LogicComponentsLookup.cs" />
-    <Compile Include="Assets\Battle\Logic\Component\IDComponent.cs" />
-    <Compile Include="Assets\Battle\WorldSystems.cs" />
+    <Compile Include="Assets\ECSWorld\WorldManager.cs" />
+    <Compile Include="Assets\ECSWorld\Contexts.cs" />
+    <Compile Include="Assets\ECSWorld\GameModeBase.cs" />
+    <Compile Include="Assets\ECSWorld\ECSWorld.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
