--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -66,8 +66,11 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Node\WNode.cs" />
     <Compile Include="Assets\Hotfix\Core\Utility\AssemblyUtility.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\EventPoolMode.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaContext\MetaEntity.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Platform\BaseCallbackMessage.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicContext\LogicContext.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Variable\GenericVariable.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicContext\LogicEntity.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Action.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Module.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Audio\AudioManager.cs" />
@@ -82,16 +85,19 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Input\InputManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Image\ImageExtension.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicContext\LogicComponentsLookup.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Vector3\Vector3Extension.cs" />
     <Compile Include="Assets\Hotfix\Init\Init.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Fiber\ThreadPoolScheduler.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaContext\MetaMatcher.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Log\LogLevel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\TBEmptyGoTo.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Base\IDispose.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Language\LanguageType.cs" />
     <Compile Include="Assets\Hotfix\Logic\Scene\MainScene.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Log\ILogHelper.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicContext\LogicMatcher.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Id\IdUtility.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Platform\PlatformManager.cs" />
@@ -105,7 +111,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\CodeTypes\AttributeBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Fiber\FiberManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\Binding\ViewModelBinding.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicWorld\LogicComponentsLookup.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingletonUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadState.cs" />
@@ -117,7 +122,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Types.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\RootNode\WBlackboard.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AssetBundleCreateRequestAwaiter.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaWorld\MetaEntity.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\Binding\Binding.cs" />
     <Compile Include="Assets\Hotfix\Core\Utility\MarshalUtility.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventArgs.cs" />
@@ -129,7 +133,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Window\WindowMode.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ScrollerPro\LoopScroll.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\UIRoot\UIRootCommon.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaWorld\MetaComponentsLookup.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\Transform\TransformExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Extension\SpriteRenderer\SpriteRendererExtension.cs" />
@@ -141,6 +144,7 @@
     <Compile Include="Assets\Hotfix\Logic\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Platform\Dev\DevCallbackMessage.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\AStarMap\AStarMapManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaContext\MetaContext.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Random\RandomUtility.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\UIRoot\UIRootLogin.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\UILogic\UIDefine.cs" />
@@ -157,6 +161,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\ArchiveManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\UnityWebRequestAsyncOperationAwaiter.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Network\NetworkUtility.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaContext\MetaComponentsLookup.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\UserSetData.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\ReferencePool\ReferencePoolInfo.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\AStarMap\AStarNodeData.cs" />
@@ -164,25 +169,21 @@
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AsyncOperationAwaiter.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\IObjectPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadFile.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\WorldSystems.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicWorld\LogicEntity.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Tables.cs" />
     <Compile Include="Assets\Hotfix\Runtime\MVVM\View\View\IView.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\Variable\Variable.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Orca\OrcaManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\UILogin\UILoginPanel.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicWorld\LogicContext.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicWorld\LogicComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Base\GroupEntityIndex.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Coroutine\CoroutineCompletedHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Fiber\MainThreadScheduler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Window\Window.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\EmptyGoTo.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaWorld\MetaMatcher.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Awaiter\AssetBundleRequestAwaiter.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Utility\Helper\DefaultLogHelper.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Extension\WNodeExtension.cs" />
     <Compile Include="Assets\Hotfix\Core\Event\EventManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaContext\MetaComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Extension\IUILogicExtension.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.FunctionTurn.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\RedDot\RedDot.cs" />
@@ -190,13 +191,13 @@
     <Compile Include="Assets\Hotfix\Runtime\Manager\Language\LanguageManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Fiber\IScheduler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.Init.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaWorld\MetaComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Node\WEnum.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandManager.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectInfo.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ECS\Base\EntityIndexEnum.cs" />
     <Compile Include="Assets\Hotfix\Core\Base\EventPool\EventPool.Event.cs" />
     <Compile Include="Assets\Hotfix\Runtime\ThreadSynchronizationContext\ThreadSynchronizationContext.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicContext\LogicComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Video\VideoManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Archive\DisplayModeType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingletonFixedUpdate.cs" />
@@ -209,6 +210,7 @@
     <Compile Include="Assets\Hotfix\Core\Base\DataStruct\TypeNamePair.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Platform\BasePlatform.cs" />
     <Compile Include="Assets\Hotfix\Core\ObjectPool\ObjectPoolManager.ObjectPool.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicSystems.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\PopupWindow.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Singleton\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Platform\Dev\DevPlatform.cs" />
@@ -220,8 +222,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Singleton\ISingletonLateUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\CodeTypes\CodeTypesManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Command\CommandDataType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\MetaWorld\MetaContext.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\ECS\LogicWorld\LogicMatcher.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\RootNode\WRootNode.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\Download\DownloadData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Manager\UI\Manager\WindowManager.cs" />
